# docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "https://soulpower.ddnsto.com:443",
+    "host": "127.0.0.1:8080",
     "paths": {
         "/api/user/login": {
             "post": {
@@ -100,6 +100,45 @@
                 }
             }
         },
+        "/files/compress": {
+            "post": {
+                "description": "压缩文件",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "File"
+                ],
+                "summary": "压缩文件",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "req",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/files.FileCompress"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/files/content": {
             "post": {
                 "description": "查看文件属性",
@@ -110,7 +149,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "查看文件属性",
                 "parameters": [
@@ -152,7 +191,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "创建文件",
                 "parameters": [
@@ -181,6 +220,62 @@
                 }
             }
         },
+        "/files/decompress": {
+            "post": {
+                "description": "解压文件",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "File"
+                ],
+                "summary": "解压文件",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "req",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/files.FileDecompress"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/files/download": {
+            "get": {
+                "description": "下载文件指明路径",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "File"
+                ],
+                "summary": "下载文件",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/files/mode": {
             "post": {
                 "description": "修改文件权限",
@@ -191,7 +286,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "修改文件权限",
                 "parameters": [
@@ -230,7 +325,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "恢复回收站(单个文件)",
                 "parameters": [
@@ -269,7 +364,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "查询回收站(分页)",
                 "parameters": [
@@ -308,7 +403,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "删除文件",
                 "parameters": [
@@ -347,7 +442,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "修改文件名字",
                 "parameters": [
@@ -386,7 +481,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "获取该路径的文件",
                 "parameters": [
@@ -428,7 +523,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File"
                 ],
                 "summary": "查看文件大小",
                 "parameters": [
@@ -456,6 +551,29 @@
                     },
                     "500": {
                         "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/files/upload": {
+            "post": {
+                "description": "上传文件指明路径",
+                "tags": [
+                    "File"
+                ],
+                "summary": "上传文件",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "request",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
@@ -703,6 +821,35 @@
                 }
             }
         },
+        "files.FileCompress": {
+            "type": "object",
+            "required": [
+                "dst",
+                "files",
+                "name",
+                "type"
+            ],
+            "properties": {
+                "dst": {
+                    "type": "string"
+                },
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "replace": {
+                    "type": "boolean"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "files.FileContentReq": {
             "type": "object",
             "required": [
@@ -710,6 +857,25 @@
             ],
             "properties": {
                 "path": {
+                    "type": "string"
+                }
+            }
+        },
+        "files.FileDecompress": {
+            "type": "object",
+            "required": [
+                "dst",
+                "path",
+                "type"
+            ],
+            "properties": {
+                "dst": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
